--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,12 +36,18 @@ dist.jlink.output=${dist.jlink.dir}/transporte
 endorsed.classpath=
 excludes=
 file.reference.commons-collections4-4.3.jar=C:\\Users\\soporte\\Documents\\HG\\Librerias\\poi-bin-4.1.0-20190412\\poi-4.1.0\\lib\\commons-collections4-4.3.jar
+file.reference.commons-collections4-4.3.jar-1=C:\\Users\\Gherni\\Documents\\Librerias\\poi-bin-4.1.0-20190412\\poi-4.1.0\\lib\\commons-collections4-4.3.jar
 file.reference.commons-compress-1.18.jar=C:\\Users\\soporte\\Documents\\HG\\Librerias\\poi-bin-4.1.0-20190412\\poi-4.1.0\\lib\\commons-compress-1.18.jar
+file.reference.commons-compress-1.18.jar-1=C:\\Users\\Gherni\\Documents\\Librerias\\poi-bin-4.1.0-20190412\\poi-4.1.0\\lib\\commons-compress-1.18.jar
 file.reference.dom4j-2.1.1.jar=C:\\Users\\soporte\\Documents\\HG\\Librerias\\poi-bin-4.1.0-20190412\\poi-4.1.0\\dom4j-2.1.1.jar
 file.reference.poi-4.1.0.jar=C:\\Users\\soporte\\Documents\\HG\\Librerias\\poi-bin-4.1.0-20190412\\poi-4.1.0\\poi-4.1.0.jar
+file.reference.poi-4.1.0.jar-1=C:\\Users\\Gherni\\Documents\\Librerias\\poi-bin-4.1.0-20190412\\poi-4.1.0\\poi-4.1.0.jar
 file.reference.poi-ooxml-4.1.0.jar=C:\\Users\\soporte\\Documents\\HG\\Librerias\\poi-bin-4.1.0-20190412\\poi-4.1.0\\poi-ooxml-4.1.0.jar
+file.reference.poi-ooxml-4.1.0.jar-1=C:\\Users\\Gherni\\Documents\\Librerias\\poi-bin-4.1.0-20190412\\poi-4.1.0\\poi-ooxml-4.1.0.jar
 file.reference.poi-ooxml-schemas-4.1.0.jar=C:\\Users\\soporte\\Documents\\HG\\Librerias\\poi-bin-4.1.0-20190412\\poi-4.1.0\\poi-ooxml-schemas-4.1.0.jar
+file.reference.poi-ooxml-schemas-4.1.0.jar-1=C:\\Users\\Gherni\\Documents\\Librerias\\poi-bin-4.1.0-20190412\\poi-4.1.0\\poi-ooxml-schemas-4.1.0.jar
 file.reference.xmlbeans-3.1.0.jar=C:\\Users\\soporte\\Documents\\HG\\Librerias\\poi-bin-4.1.0-20190412\\poi-4.1.0\\ooxml-lib\\xmlbeans-3.1.0.jar
+file.reference.xmlbeans-3.1.0.jar-1=C:\\Users\\Gherni\\Documents\\Librerias\\poi-bin-4.1.0-20190412\\poi-4.1.0\\ooxml-lib\\xmlbeans-3.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -51,7 +57,13 @@ javac.classpath=\
     ${file.reference.dom4j-2.1.1.jar}:\
     ${file.reference.commons-collections4-4.3.jar}:\
     ${file.reference.commons-compress-1.18.jar}:\
-    ${file.reference.poi-ooxml-schemas-4.1.0.jar}
+    ${file.reference.poi-ooxml-schemas-4.1.0.jar}:\
+    ${file.reference.poi-4.1.0.jar-1}:\
+    ${file.reference.poi-ooxml-4.1.0.jar-1}:\
+    ${file.reference.poi-ooxml-schemas-4.1.0.jar-1}:\
+    ${file.reference.xmlbeans-3.1.0.jar-1}:\
+    ${file.reference.commons-collections4-4.3.jar-1}:\
+    ${file.reference.commons-compress-1.18.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
